--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "material-ui-icons": "^1.0.0-beta.35",
     "moment": "^2.20.1",
     "prettier": "^1.11.0",
+    "prop-types": "^15.6.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
-    "styled-components": "^3.1.6"
+    "styled-components": "^3.1.6",
+    "typeface-roboto": "0.0.54"
   },
   "scripts": {
     "start": "react-scripts start",
