--- a/package.json
+++ b/package.json
@@ -4,10 +4,15 @@
 	"private": true,
 	"homepage": "https://Halimazeez.github.io/FinalYearProject",
 	"dependencies": {
+		"create-react-class": "^15.6.3",
+		"formsy-material-ui": "^0.6.3",
+		"formsy-material-ui-ef": "^0.3.13",
+		"formsy-react": "^1.1.3",
 		"gh-pages": "^1.1.0",
 		"material-ui": "^1.0.0-beta.35",
 		"material-ui-icons": "^1.0.0-beta.35",
 		"moment": "^2.20.1",
+		"npm": "^5.7.1",
 		"prettier": "^1.11.0",
 		"prop-types": "^15.6.1",
 		"react": "^16.2.0",
@@ -16,7 +21,8 @@
 		"react-router-dom": "^4.2.2",
 		"react-scripts": "1.1.1",
 		"styled-components": "^3.1.6",
-		"typeface-roboto": "0.0.54"
+		"typeface-roboto": "0.0.54",
+		"validator": "^9.4.1"
 	},
 	"scripts": {
 		"start": "react-scripts start",
