--- a/package.json
+++ b/package.json
@@ -2,17 +2,13 @@
 	"name": "project",
 	"version": "0.1.0",
 	"private": true,
-	"homepage": "https://Halimazeez.github.io/FinalYearProject",
+	"homepage": "https://react-5c622.firebaseapp.com",
 	"dependencies": {
-		"create-react-class": "^15.6.3",
-		"formsy-material-ui": "^0.6.3",
-		"formsy-material-ui-ef": "^0.3.13",
-		"formsy-react": "^1.1.3",
+		"firebase": "^4.10.1",
 		"gh-pages": "^1.1.0",
 		"material-ui": "^1.0.0-beta.35",
 		"material-ui-icons": "^1.0.0-beta.35",
 		"moment": "^2.20.1",
-		"npm": "^5.7.1",
 		"prettier": "^1.11.0",
 		"prop-types": "^15.6.1",
 		"react": "^16.2.0",
