--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
 	"private": true,
 	"homepage": "https://react-5c622.firebaseapp.com",
 	"dependencies": {
-		"firebase": "^4.10.1",
+		"firebase": "^4.11.0",
 		"gh-pages": "^1.1.0",
 		"material-ui": "^1.0.0-beta.35",
 		"material-ui-icons": "^1.0.0-beta.35",
+		"materialize-css": "^0.100.2",
 		"moment": "^2.20.1",
 		"prettier": "^1.11.0",
 		"prop-types": "^15.6.1",
@@ -24,7 +25,6 @@
 		"start": "react-scripts start",
 		"build": "react-scripts build",
 		"test": "react-scripts test --env=jsdom",
-		"eject": "react-scripts eject",
-		"deploy": "npm run build&&gh-pages -d build"
+		"eject": "react-scripts eject"
 	}
 }
