--- a/package.json
+++ b/package.json
@@ -1,30 +1,30 @@
 {
-	"name": "project",
-	"version": "0.1.0",
-	"private": true,
-	"homepage": "https://react-5c622.firebaseapp.com",
-	"dependencies": {
-		"firebase": "^4.11.0",
-		"gh-pages": "^1.1.0",
-		"material-ui": "^1.0.0-beta.35",
-		"material-ui-icons": "^1.0.0-beta.35",
-		"materialize-css": "^0.100.2",
-		"moment": "^2.20.1",
-		"prettier": "^1.11.0",
-		"prop-types": "^15.6.1",
-		"react": "^16.2.0",
-		"react-dom": "^16.2.0",
-		"react-router": "^4.2.0",
-		"react-router-dom": "^4.2.2",
-		"react-scripts": "1.1.1",
-		"styled-components": "^3.1.6",
-		"typeface-roboto": "0.0.54",
-		"validator": "^9.4.1"
-	},
-	"scripts": {
-		"start": "react-scripts start",
-		"build": "react-scripts build",
-		"test": "react-scripts test --env=jsdom",
-		"eject": "react-scripts eject"
-	}
+  "name": "FitMe",
+  "version": "0.1.0",
+  "private": true,
+  "homepage": "https://react-5c622.firebaseapp.com",
+  "dependencies": {
+    "firebase": "^4.11.0",
+    "gh-pages": "^1.1.0",
+    "material-ui": "^1.0.0-beta.35",
+    "material-ui-icons": "^1.0.0-beta.35",
+    "materialize-css": "^0.100.2",
+    "moment": "^2.20.1",
+    "prettier": "^1.11.0",
+    "prop-types": "^15.6.1",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
+    "react-scripts": "1.1.1",
+    "styled-components": "^3.1.6",
+    "typeface-roboto": "0.0.54",
+    "validator": "^9.4.1"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
+  }
 }
