--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "moment": "^2.20.1",
     "prettier": "^1.11.0",
     "prop-types": "^15.6.1",
+    "rc-slider": "^8.6.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-router": "^4.2.0",
