--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "homepage": "https://react-5c622.firebaseapp.com",
   "dependencies": {
+    "ajv": "^6.4.0",
     "firebase": "^4.11.0",
+    "firestore-react": "^0.1.5",
     "gh-pages": "^1.1.0",
     "material-ui": "^1.0.0-beta.35",
     "material-ui-icons": "^1.0.0-beta.35",
@@ -15,9 +17,11 @@
     "rc-slider": "^8.6.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
+    "redux": "^3.7.2",
     "styled-components": "^3.1.6",
     "typeface-roboto": "0.0.54",
     "validator": "^9.4.1"
