--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
+    "react-vis": "^1.9.2",
     "styled-components": "^3.1.6",
     "typeface-roboto": "0.0.54",
     "validator": "^9.4.1"
