--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "rc-slider": "^8.6.1",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
+    "react-easy-print": "^0.5.4",
+    "react-print": "^1.3.1",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
